# weather-api

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile.deploy  README.md  pyproject.toml
weather_api/: __init__.py
