[tool.poetry]
name = "my-weather-api"
version = "0.1.0"
description = ""
authors = ["Paul Horton <phorton@sonatype.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
weather2 = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
